--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,8 +39,10 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
-    ${libs.Primefaces_6.2.classpath}:\
-    ${libs.PrimeFaces7.0.classpath}
+    ${libs.PrimeFaces7.0.classpath}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
