--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,7 +48,8 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.Omnifaces_1.4.classpath}:\
-    ${libs.Primefaces_7.0.classpath}
+    ${libs.Primefaces_7.0.classpath}:\
+    ${libs.PrimeFaces7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
