--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,7 +50,8 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.PrimeFaces7.0.classpath}:\
-    ${libs.omnifaces 1.4.classpath}
+    ${libs.omnifaces 1.4.classpath}:\
+    ${libs.jasperreport.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
